Fix Mobile Overflow for post recommend cards (#261)

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -90,6 +90,9 @@
 }
 
 .post-recommendations{
+    @media (max-width: 330px) { // for smaller devices, adjust title font size to fit into card
+        font-size: 1rem;
+    }
     font-size: 1.25rem;
 }
 
@@ -115,9 +118,11 @@
 
 .post-recommend-img{
     align-self: center;
-    width: 10em;
+    width: 90%;
     height: auto;
     margin: 1em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .post-recommend-info{
